--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "migration:generate": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:generate src/migrations/$npm_config_name -d src/config/data-source.ts",
-    "migration:run": "npm run build && typeorm migration:run -d dist/config/data-source.js",
-    "migration:revert": "npm run build && typeorm migration:revert -d dist/config/data-source.js",
-    "seed:admin": "ts-node -r tsconfig-paths/register -r dotenv/config src/seeds/create-admin.seed.ts"
+    "typeorm": "node -r ts-node/register -r tsconfig-paths/register ./node_modules/typeorm/cli.js --dataSource ./src/data-source.ts",
+    "migration:generate": "npm run typeorm -- migration:generate",
+    "migration:run": "npm run typeorm -- migration:run",
+    "migration:revert": "npm run typeorm -- migration:revert",
+    "seed:admin": "ts-node -r tsconfig-paths/register -r dotenv/config src/seeds/admin.seed.ts"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
